--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "notistack": "^0.9.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
